# sage-libgap

./: .gitignore  README.md  pyproject.toml  setup.py
bootstrap/: env.py
bootstrap/misc/: cachefunc.py  randstate.py  sage_unittest.py
bootstrap/rings/: infinity.py  integer_ring.py  rational_field.py  real_double.py
bootstrap/structure/: element.pxd  element.pyx  sage_object.pxd  sage_object.pyx
scripts/: extract_sage_libgap.py
src/sage_libgap/: all_documented_functions.py  assigned_names.py  context_managers.py  element.pxd  element.pyx  env.py  gap_functions.py  gap_globals.py  gap_includes.pxd  libgap.pyx  operations.py  sage.gaprc  saved_workspace.py  util.pxd  util.pyx
src/sage_libgap/arith/: __init__.py  long.pxd
src/sage_libgap/cpython/: builtin_types.pyx  getattr.pxd  getattr.pyx  pycore_long.h  pycore_long.pxd  string.pxd  string.pyx  string_impl.h  wrapperdescr.pxd  wrapperdescr.pyx
src/sage_libgap/interfaces/: gap_workspace.py
src/sage_libgap/libs/gmp/: all.pxd  binop.pxd  misc.pxd  mpf.pxd  mpn.pxd  mpq.pxd  mpz.pxd  pylong.pxd  pylong.pyx  random.pxd  randomize.pxd  types.pxd
src/sage_libgap/misc/: cachefunc.py  persist.pyx  randstate.py  sage_unittest.py  temporary_file.py
src/sage_libgap/rings/: __init__.py  infinity.py  integer_fake.h  integer_fake.pxd  integer_ring.py  rational_field.py  real_double.py
src/sage_libgap/structure/: element.pxd  element.pyx  richcmp.pxd  richcmp.pyx  sage_object.pxd  sage_object.pyx
tests/: test.py  test_long.py  test_smallsemi.py
